# s3_largecopy

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  FUTURE_FEATURES.md  README.md  build_static_docker.sh  cliff.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  AUTO_MODE.md  COST_ANALYSIS.md  INSTALLATION.md  PERMISSIONS.md  TROUBLESHOOTING.md  USAGE.md
src/: app.rs  args.rs  auto.rs  estimate.rs  main.rs  pricing.rs  progress.rs  s3_utils.rs
