[package]
name = "s3_largecopy"
version = "1.0.6"
edition = "2024"
description = "Copy large files (>5GB) between S3 buckets using multipart upload"
authors = ["Bart LEBOEUF"]
readme = "README.md"
homepage = "https://github.com/bartleboeuf/s3_largecopy"
repository = "https://github.com/bartleboeuf/s3_largecopy"
rust-version = "1.93.0"  # Specify minimum Rust version
categories = ["development-tools", "command-line-utilities"]
keywords = ["s3", "aws", "aws-sdk-s3"]

[dependencies]
aws-config = { version = "1.8.14", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.123.0", features = ["rt-tokio"] }
aws-smithy-runtime = { version = "1.10.1", features = ["client", "connector-hyper-0-14-x"] }
aws-smithy-types = "1.4.4"
hyper = "=0.14.32"
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.4.0", features = ["derive"] }
indicatif = "0.18.3"
anyhow = "1.0.101"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

# Optimize dependencies for release builds
[profile.release.package."*"]
opt-level = 3
debug = false

# Development profile optimizations
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

# Speed up dev builds by reducing optimization on deps
[profile.dev.package."*"]
opt-level = 1
debug = false

[dev-dependencies]
mockall = "0.13"

# Used only on Windows to build the vcpkg dependencies
[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
# The revision of the vcpkg repository to use
# https://github.com/microsoft/vcpkg/tags
rev = "2025.12.12"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dev-dependencies = ["openssl"] }

[[bin]]
name = "s3_largecopy"
path = "src/main.rs"
